<resources>
    <string name="app_name">UNESCO Heritage App</string>
    <string name="btn_map">Open Map</string>
    <string name="btn_favorite">Favourite sites</string>
    <string name="title_main_app">World Heritage List</string>
    <string name="btn_back">Back</string>
    <string name="btn_search">Search site</string>
    <string name="workInProgress">Work in progress</string>
    <string name="search_by_country">Country</string>
    <string name="search_by_name">Name</string>
    <string name="tv_frag_search_by">Search by:</string>
    <string name="et_hint_search">Search</string>
    <string name="tv_item_fragment_world_heritage">World Heritage</string>
    <string name="name">Name</string>
    <string name="country">Country</string>
    <string name="empty" translatable="false">---</string>
    <string name="category">Category</string>
    <string name="description">Description</string>
    <string name="btn_add_fav">Add to favorite</string>
    <string name="date_inscribed">Date inscribed</string>
    <string name="area">Area</string>
    <string name="exit">Exit</string>
    <string name="confirm_Exit">Are you sure you want to exit?</string>
    <string name="id">id</string>
</resources>